# coscstats

./: .gitignore  LICENSE  README.md  _.bashrc_cust  pyproject.toml
coscstats/: __init__.py  api.py  args.py  coscstats.py  data.py  dataPoint.py  data_Point.py  data_header.py  data_points.py  file.py  header.py  input.py  pixeldata_rasterio.py  settings.py  stats.py
coscstats/commands/: commands.py
settings/: config.json
